Pagina de Cadastro

--- a/login.html
+++ b/login.html
@@ -13,7 +13,7 @@
     <div class="row justify-content-center">
         <div class="col-sm-12 col-md-8 col-xl-5 col-xl-5">
             <h1 class="text-center logo">
-                <span class="meu">meu</span><span class="controle">controle</span>
+                <span class="azul">meu</span><span class="roxo">controle</span><span class="azul">_login</span>
             </h1>
             <form>
                 <div class="form-group">
@@ -27,7 +27,7 @@
                 <button type="button" class="btn btn-primary">entrar</button>
                 <div class="text-white">
                     <span class="float-left"><a href="#" class="text-white">esqueci a senha</a></span>
-                    <span class="float-right">não tem conta? <a href="#">crie agora</a></span>
+                    <span class="float-right">não tem conta? <a href="cadastro.html">crie agora</a></span>
                 </div>
             </form>
         </div>
