Paginas de recuperacao de senha

--- a/login.html
+++ b/login.html
@@ -26,7 +26,7 @@
                 </div>
                 <button type="button" class="btn btn-primary">entrar</button>
                 <div class="text-white">
-                    <span class="float-left"><a href="#" class="text-white">esqueci a senha</a></span>
+                    <span class="float-left"><a href="recuperacao_senha.html" class="text-white">esqueci a senha</a></span>
                     <span class="float-right">não tem conta? <a href="cadastro.html">crie agora</a></span>
                 </div>
             </form>
