Desativação do autocomplete

--- a/login.html
+++ b/login.html
@@ -15,7 +15,7 @@
             <h1 class="text-center logo">
                 <span class="azul">meu</span><span class="roxo">controle</span><span class="azul">_login</span>
             </h1>
-            <form>
+            <form autocomplete="off">
                 <div class="form-group">
                     <label for="usuario">usuário</label>
                     <input type="text" class="form-control is-invalid" id="usuario" placeholder="usuário">
