--- a/recuperacao_senha3.html
+++ b/recuperacao_senha3.html
@@ -15,7 +15,7 @@
             <h1 class="text-center logo">
                 <span class="azul">meu</span><span class="roxo">controle</span><span class="azul">_recuperar</span>
             </h1>
-            <form>
+            <form autocomplete="off">
                 <div class="form-group">
                     <label for="senha">senha</label>
                     <input type="password" class="form-control is-invalid" id="senha" placeholder="senha">
