--- a/cadastro.html
+++ b/cadastro.html
@@ -15,7 +15,7 @@
             <h1 class="text-center logo">
                 <span class="azul">meu</span><span class="roxo">controle</span><span class="azul">_cadastro</span>
             </h1>
-            <form>
+            <form autocomplete="off">
                 <div class="form-group">
                     <label for="nome">nome</label>
                     <input type="text" class="form-control is-invalid" id="nome" placeholder="nome">
