--- a/recuperacao_senha.html
+++ b/recuperacao_senha.html
@@ -15,7 +15,7 @@
             <h1 class="text-center logo">
                 <span class="azul">meu</span><span class="roxo">controle</span><span class="azul">_recuperar</span>
             </h1>
-            <form>
+            <form autocomplete="off">
                 <div class="form-group">
                     <label for="email">e-mail</label>
                     <input type="email" class="form-control is-invalid" id="email" placeholder="e-mail">
