--- a/login.html
+++ b/login.html
@@ -4,8 +4,8 @@
     <title></title>
     <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/bootstrap.css">
+    >
     <link rel="stylesheet" href="css/styles.css">
-    <script src="js/bootstrap.js"></script>
     <meta charset="utf-8">
 </head>
 <body>
@@ -18,7 +18,8 @@
             <form autocomplete="off">
                 <div class="form-group">
                     <label for="usuario">usuário</label>
-                    <input type="text" class="form-control is-invalid" id="usuario" placeholder="usuário">
+                    <input type="text" class="form-control is-invalid" id="usuario" placeholder="usuário"
+                           data-toggle="popover" data-content="um nome de usuário é obrigátorio">
                 </div>
                 <div class="form-group">
                     <label for="senha">senha</label>
@@ -33,5 +34,24 @@
         </div>
     </div>
 </div>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
+<script>
+    $(function () {
+        $('#usuario').popover({
+            container: 'body',
+            trigger: 'manual'
+        })
+    });
+    $('#usuario').popover('show');
+
+</script>
 </body>
 </html>
